添加 ARM 远程桌面（甲骨文 Ubuntu ARM Gnome ）安装 IDEA